--- a/.githubs/workflows/gradle.yml
+++ b/.githubs/workflows/gradle.yml
@@ -34,6 +34,10 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./gradlew
+      shell: bash
+        
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
