--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -42,11 +42,19 @@ jobs:
    
    # rds, s3 등의 설정 정보를 github에 올리지 않기 위해 .gitignore에 application.properties 추가
    # ec2 인스턴스에서 애플리케이션을 실행하기 위해서 설정 정보가 필요하기 때문에 application.properties을 settings의 secrets에 추가
-   # git actions의 job으로 파일을 생성하도록 설정
     - name: create application.properties file
       run: |
         touch ./src/main/resources/application.properties
         echo "${{ secrets.ENV_VARS }}" >> src/main/resources/application.properties
+        
+        mkdir ./src/main/resources/database
+        touch ./src/main/resources/database/application-database.yml
+        echo "${{ secrets.ENV_VARS_DB }}" >> src/main/resources/application-database.yml
+        
+        mkdir ./src/main/resources/auth
+        touch ./src/main/resources/auth/application-auth.yml
+        echo "${{ secrets.ENV_VARS_AUTH }}" >> src/main/resources/application-auth.yml
+        
 
     - name: Grant execute permission for gradlew
       run: chmod +x ./gradlew
