[FEAT] add img(in record) upload feature
S3로 이미지 업로드하는 기능 추가
S3Config에서 multipart 파일의 용량을 5MB로 제한

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,7 @@ out/
 .vscode/
 /src/main/resources/auth/
 /src/main/resources/database/
+
+/src/main/resources/application.properties
+/src/main/resources/database/application-database.yml
+/src/main/resources/auth/application-auth.yml
