[REFACTOR] change deploy.sh file's path

--- a/appspec.yml
+++ b/appspec.yml
@@ -7,6 +7,6 @@ files:
     
 hooks:
   AfterInstall:
-    - location: deploy.sh
+    - location: scripts/deploy.sh
       timeout: 60
       runas: ubuntu
