--- a/appspec.yml
+++ b/appspec.yml
@@ -9,4 +9,5 @@ hooks:
   AfterInstall:
     - location: scripts/deploy.sh
       timeout: 60
-      runas: root
+      runas: ubuntu
+#      runas: root
