[FEAT]: 이메일로 임시 비밀번호 전송 기능 추가

--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,6 @@ out/
 /src/main/resources/database/
 
 /src/main/resources/application.properties
+/src/main/resources/application.yml
 /src/main/resources/database/application-database.yml
 /src/main/resources/auth/application-auth.yml
