--- a/.gitignore
+++ b/.gitignore
@@ -35,9 +35,11 @@ out/
 
 ### VS Code ###
 .vscode/
+/src/main/resources
 /src/main/resources/auth/
 /src/main/resources/database/
 
 /src/main/resources/application.properties
+/src/main/resources/application.yml
 /src/main/resources/database/application-database.yml
 /src/main/resources/auth/application-auth.yml
