[FIX] fix error
application.yml을 .gitignore에 추가하면서 생긴 에러 해결 시도

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -48,6 +48,8 @@ jobs:
         touch ./src/main/resources/application.properties
         echo "${{ secrets.ENV_VARS }}" >> src/main/resources/application.properties
         
+        echo "${{ secrets.ENV_VARS_APP }}" > src/main/resources/application.yml
+        
         mkdir ./src/main/resources/database
         touch ./src/main/resources/database/application-database.yml
         echo "${{ secrets.ENV_VARS_DB }}" >> src/main/resources/database/application-database.yml
